solved my layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 
 html {
@@ -14,24 +15,27 @@ html {
 
 body {
   font-family: 'Lato', Arial, sans-serif;
-  font-weight: 100;
-  min-width: 100vw;
-  min-height: 100vh;
+  font-weight: 400;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper {
   min-height: 100vh;
-  min-width: 100vw;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-top: 4em;
+}
+
+.name-tag {
+  max-width: 400px;
 }
 
 .name-tag-top {
   color: white;
   background: red;
-  padding-top: 5px;
-  padding-bottom: 10px;
+  padding-top: .5em;
+  padding-bottom: .75em;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -40,18 +44,18 @@ body {
   font-weight: 900;
   font-family: sans-serif;
   text-align: center;
-  font-size: 32px;
-  letter-spacing: 4px;
+  font-size: 2em;
+  letter-spacing: .25em;
   text-transform: uppercase;
-  margin-bottom: -3px;
+  margin-bottom: -.25em;
 }
 
 .name-tag-my-name {
   font-weight: 100;
   font-family: 'Lato', sans-serif;
   text-align: center;
-  font-size: 18px;
-  letter-spacing: 2px;
+  font-size: 1em;
+  letter-spacing: .1em;
 }
 
 .name-tag-name {
@@ -59,22 +63,24 @@ body {
   font-size: 4em;
   line-height: 1.1;
   background-color: white;
-  padding-bottom: 10px;
-  padding-top: 5px;
+  padding-bottom: .25em;
+  padding-top: .125em;
+  padding-left: .5em;
 }
 
 .name-tag-bottom {
   background-color:red;
-  height: 20px;
+  height: 1.25em;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: .5em;
+  padding-bottom: .75em;
 }
 
 .wrapper-2 {
   display: flex;
   flex-direction: column;
+  margin-left: 1.5em;
 }
 
 .description {
@@ -87,12 +93,11 @@ body {
   list-style-type: none;
   display: flex;
   margin-top: 1em;
+  align-items: center;
   justify-content: space-between;
 }
 
 .link-list-item {
-  width: 6em;
-  height: 6em;
   border-radius: 50%;
 }
 
